fix mobile menu not fully visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ body{
 }
 
 .header .menu-btn:checked ~ .menu {
-  max-height: 690px;
+  max-height: 732px;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
